# rd_observability

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/rd_observability/: obs_api.py  obs_baseline.py  obs_baseline_conf.py  obs_baseline_helper.py  obs_classes.py  obs_conf.py  observability.py  observability_db.py
tests/: conftest.py
tests/data/files/CM/1/: track_CM13-690013_CM13-780045.gpx  track_CM13-690013_CM13-790097.gpx  track_CM13-780045_CM13-690013.gpx  track_CM13-780045_CM13-790097.gpx  track_CM13-790066_CM13-690013.gpx  track_CM13-790097_CM13-690013.gpx  track_CM13-790097_CM13-780045_alt.gpx  track_CM16-350192_CM16-370236.gpx  track_CM16-360190_CM16-350195.gpx  track_CM16-370247_CM16-470016.gpx  track_CM16-460033_CM16-370245.gpx  track_CM16-460086_CM16-370245.gpx  track_CM16-470133_CM16-470016.gpx
tests/data/files/CM/2/: track_CM21-980131_CM21-980183.gpx  track_CM23-670050_CM23-770082.gpx
tests/data/files/CM/4/: track_CM42-740023_CM42-940021.gpx
tests/data/files/CN/1/: track_CN15-490010_CN16-520027.gpx  track_CN16-520027_CN15-490010.gpx
tests/integration/: test_int_obs_baseline.py
tests/unit/: conftest.py  test_api_mode.py  test_extract_metrics.py  test_metrics.py  test_obs_baseline.py  test_obs_baseline_helper.py  test_observability_db.py  test_record_event.py  test_result.py  test_wrapped_saves.py
